feat/ added logo, changed company name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- SEO Meta Tags -->
-    <title>Idea2RealApp</title>
+    <title>AppsoluteAI</title>
     <meta name="description" content="Transform your ideas into reality with AppSnap's rapid app development services. Get your custom application built and deployed in record time. An App in a Snap™" />
     <meta name="keywords" content="rapid app development, quick app prototyping, custom software development, MVP development, fast app deployment, mobile app development, web application" />
     
